--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
-
+body{
+    margin-left: 100px;
+    margin-right: 100;
+}
+main {
+    background-color: lightpink;
+}
+header {
+    height: 100px;
+    background-color: lightgray;
+}
+.navbar_items {
+    float: right;
+    margin-right: 60px;
+    margin-bottom: 50px;
+}
