--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,9 @@ header h1 {
     height: 20px;
     padding: 16px 6% 16px 0;
 }
+.about_me h2 {
+    flex-wrap: aside;
+}
 
 nav {
     display: flex;
