--- a/assets/style.css
+++ b/assets/style.css
@@ -89,34 +89,20 @@ ul {
     padding: 0.5rem 0rem;
     transition: all 0.5s ease-in-out;
 }
-body{
-    margin-left: 100px;
-    margin-right: 100;
+.articleimg {
+    max-width: 50%;
 }
-
-
-
-
-.about_me h2 {
-    flex-wrap: aside;
-}
-
-
-
-.banner {
-    display: block;
-    height: 400px;
-    width: 100%;
-
-background-size: cover;
-background-color: blue;
-
-background-position: center;
-}
-.about_me {
-    display: flex;
-}
-
-footer {
-
-}
+@media screen and (min-width: 768px) {
+    .portbox{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    @media screen and (min-width: 992px) {
+        .port-h2 {
+            width: 50%;
+        }
+        .portbox {
+            flex: 0 0 33.333%;
+            max-width: 33.333%;
+        }
+    }
