--- a/assets/reset.css
+++ b/assets/reset.css
@@ -17,3 +17,12 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-size: 100%;
 }
+
+input, select, option, optgroup, textarea, button, pre, code {
+    font-size: 100%;
+    font-family: inherit;
+}
+
+ol, ul {
+    list-style: none;
+}
