--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@ body {
 }
 a {
     text-decoration: underline;
-    color:blue
+    color: teal;
 }
 header {
     background-color: darkgray;
@@ -18,7 +18,7 @@ header {
 header h1 {
     display: inline-block;
     font-size: 52px;
-    background-color: blue;
+    background-color: teal;
     color: rgb(47, 79,79);
 }
 #name-style {
@@ -41,97 +41,31 @@ header h1 {
     height: 20rem;
     width: 100%;
     margin-bottom: 25px;
-    background-color: blue;
+    background-image: url("../assets/place_holder.png");
     background-size: cover;
     position: relative;
 }
-
-
-aside {
-    float: left;
-    background: linear-gradient(to bottom right, rgba(173, 129, 129, 0.842),rgba(157, 190, 209, 0.745));
-    background-repeat: no-repeat;
-    height: 100%;
-    max-width: 12rem;
+#subtitle-img {
+    position: absolute;
+    right: 1rem;
+    bottom: .5rem;
+    background-color: teal;
+    font-style: italic;
+    color: darkgray;
     padding: 1rem;
-    background-color: rgba(240,248,255, 0.226);
-    justify-content: center;
-    flex-wrap: wrap;
-    position: fixed;
 }
-#name-style {
-    font-size: 25px;
-    font-family: "sofia", sans-serif;
-    color: white;
-    display: flex;
-    margin: 0 auto;
-}
-main {
-    width: 70%;
-    margin-left: 19.5rem;
-}
-section {
-    border-bottom: solid rgba(112, 128, 144, 0.699) 1px;
-}
-.side_bar {
-    margin-top: 2rem;
-}
-nav a {
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    color: whitesmoke;
-    list-style-type: none;
-}
-
-.main-title {
-    margin-bottom: 1rem;
+h2 {
+    font-size: 52px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    display: inline;
 }
 .about_me {
-    padding: 2rem 0;
-}
-.about_me > p {
-    padding: 2rem 5rem;
-} 
-.port-row {
     display: flex;
+    flex-direction: row;
+    flex: left;
     flex-wrap: wrap;
-    padding: 2.5rem;
-    background-color: rgba(240,248,255, 0.513);
+    justify-content: space-between;
+    align-items: center;
 }
-.box {
-    border: rgba(157, 190, 209, 0.52) solid 5px;
-    flex: 1 0 100%;
-    transition: flex-basis 500ms linear;
-    margin-bottom: 1.5rem;
-}
-.port-card {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem 0 0 1 rem;
-    transition: all 0.5s ease-in-out;
-}
-.card .port-h2 {
-    position: relative;
-    margin: -4rem 0 1.5rem 0;
-    padding: 0.5rem 0rem;
-    transition: all 0.5s ease-in-out;
-}
-.articleimg {
-    max-width: 50%;
-}
-@media screen and (min-width: 768px) {
-    .box{
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-    @media screen and (min-width: 992px) {
-        .port-h2 {
-            width: 50%;
-        }
-        .box {
-            flex: 0 0 33.333%;
-            max-width: 33.333%;
-        }
-    }
-}
+
+
