--- a/assets/style.css
+++ b/assets/style.css
@@ -93,3 +93,85 @@ div .work-left {
     width: min-content;
     height: auto;
 }
+.work-img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: teal;
+    font-style: italic;
+    color: darkgray;
+}
+#work-parent .img-box {
+    display: inline;
+    flex-wrap: wrap;
+    height: auto;
+    flex-basis: 40%;
+    opacity: 9%;
+    margin: .5rem;
+    padding: 0;
+    border: solid 3px teal;
+}
+
+.work-left {
+    border-left: teal solid 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px 0;
+}
+.img-box1:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+.img-title {
+    position: absolute;
+    bottom: 2rem;
+    background-color: teal;
+    color: darkgray;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.sub-one {
+    position: relative;
+}
+.sub-two {
+    position: relative;
+}
+.sub-three {
+    position: relative;
+}
+.sub-four {
+    position: relative;
+}
+.sub-one > .img-title1 {
+    position: absolute;
+    bottom: 2rem;
+    background-color: teal;
+    color: darkgray;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.sub-two > .img-title2 {
+    position: absolute;
+    bottom: 2rem;
+    background-color: teal;
+    color: darkgray;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.sub-three > .img-title3 {
+    position: absolute;
+    bottom: 2rem;
+    background-color: teal;
+    color: darkgray;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.sub-four > .img-title4 {
+    position: absolute;
+    bottom: 2rem;
+    background-color: teal;
+    color: darkgray;
+    padding: 1rem;
+    text-transform: uppercase;
+}
