--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,7 @@ header h1 {
     font-size: 52px;
     background-color: teal;
     color: white;
+    float: left;
 }
 #name-style {
     font-family: 'Amatic SC', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, Helvetica, sans-serif;
@@ -67,6 +68,7 @@ h2 {
     font-size: 52px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     display: inline;
+    float:left
 }
 .about_me {
     display: flex;
