--- a/assets/style.css
+++ b/assets/style.css
@@ -17,9 +17,10 @@ header {
     background-color: darkgray;
     padding: 20px;
     color: white;
-    width: 100%;
-    height: 150px;
+    width: 97.7%;
+    height: 120px;
     flex-direction: column;
+    text-align: center;
 }
 .links-content {
     float: right;
@@ -48,7 +49,7 @@ header h1 {
     text-transform: uppercase;
 }
 .hero {
-    height: 20rem;
+    height: 30rem;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../assets/img-coffee-laptop.png");
