--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,13 @@ header h1 {
     padding: 1rem;
 }
 h2 {
-    font-size: 52px;
+    border-right: 5px solid black;
+    min-width: 15%;
+    text-align: center;
+    font-size: 3.75rem;
+    margin-right: .2rem;
+    margin-top: .2rem;
+    padding: 1rem;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     display: inline;
     float:left
