--- a/assets/style.css
+++ b/assets/style.css
@@ -18,8 +18,35 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    opacity: 0.3;
+    opacity: 0.6;
     z-index: -2;
+}
+header {
+    background-color: darkgray;
+    width: 100%;
+    height: 10%;
+}
+header h1 {
+    display: inline-flex;
+    font-size: 5rem;
+    background-color: teal;
+    color: white;
+    padding-right: 0.9rem;
+    padding-left: 0.9rem;
+    padding-top: 0.9rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+nav {
+    float: right;
+}
+nav ul li {
+    display: inline-flex;
+    justify-content: space-around;
+    font-size: 3rem;
+    margin-right: 1.5rem;
+    margin-top: 0,5rem;
+    margin-bottom: 1rem;
 }
 #parent {
     display: flex;
@@ -35,24 +62,8 @@ a {
     text-decoration: underline;
     color: teal;
 }
-header {
-    background-color: darkgray;
-    padding: 20px;
-    color: white;
-    width: 97.7%;
-    height: 120px;
-    flex-direction: column;
-    text-align: center;
-}
 .links-content {
     float: right;
-}
-header h1 {
-    display: inline-block;
-    font-size: 52px;
-    background-color: teal;
-    color: white;
-    float: left;
 }
 #name-style {
     font-family: 'Amatic SC', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, Helvetica, sans-serif;
