--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,8 @@
 *{
     font-family: sans-serif;
-    font-weight: bold;
+    font-weight: normal;
 }
-html {
-    font-size: 62.5%;
-}
+
 body {
    background-color: lightgray;
    position: relative;
@@ -28,7 +26,7 @@ header {
 }
 header h1 {
     display: inline-flex;
-    font-size: 5rem;
+    font-size: 3rem;
     background-color: teal;
     color: white;
     padding-right: 0.9rem;
@@ -63,7 +61,7 @@ nav ul li {
     color: white;
     width: fit-content;
     height: fit-content;
-    font-size: 4rem;
+    font-size: 2rem;
     margin-top: 17rem;
     padding-right: 0.2rem;
     padding-left: 0.9rem;
@@ -81,7 +79,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     color: teal;
-    font-size: 3rem;
+    font-size: 1.5rem;
 }
 h2 {
     border-right: 0.2rem solid teal;
@@ -147,7 +145,7 @@ h2 {
 }
 footer {
     margin-bottom: 0.5rem;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
 }
 footer ul li {
     display: inline-flex;
